--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4162991be2.js" crossorigin="anonymous"></script>
     <title>Black Dashboard React by Creative Tim</title>
   </head>
   <body>
